Crash when changing active keying set. #75203

Closed
opened 2020-03-30 05:54:38 +02:00 by CobraA · 15 comments

System Information
Windows 10 64 Bits.
Graphics card GeForce GTX 1080 Ti.

Blender Version
Broken: 2.83.11 hash: 6b24f7d87c

Short description of error
If you try to change a keying set Blender crashes.
The way it causes the crash is you have to remove it first then select a new one, it doesn't crash if you select from the dropdown list.
I get this error in the console.

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF737AC6A49

Exact steps for others to reproduce the error

  • in the timeline-> Keying->Active Keying set.
  • Select a keying set.
  • Remove the set.
  • Select a new one.
  • Crash.
**System Information** Windows 10 64 Bits. Graphics card GeForce GTX 1080 Ti. **Blender Version** Broken: 2.83.11 hash: 6b24f7d87cba **Short description of error** If you try to change a keying set Blender crashes. The way it causes the crash is you have to remove it first then select a new one, it doesn't crash if you select from the dropdown list. I get this error in the console. ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF737AC6A49 ``` **Exact steps for others to reproduce the error** * in the timeline-> Keying->Active Keying set. * Select a keying set. * Remove the set. * Select a new one. * Crash.
Author

Added subscriber: @CobraA

Added subscriber: @CobraA

#75540 was marked as duplicate of this issue

#75540 was marked as duplicate of this issue

#75325 was marked as duplicate of this issue

#75325 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

but->search_func(C, but->search_arg, but->editstr, &data->items);
but->search_argis NULL

- 0	 in ui_rna_collection_search_cb at blender/source/blender/editors/interface/interface_utils.c:399
- 1	 in ui_searchbox_update at blender/source/blender/editors/interface/interface_region_search.c:379
- 2	 in ui_textedit_begin at blender/source/blender/editors/interface/interface_handlers.c:3368
- 3	 in button_activate_state at blender/source/blender/editors/interface/interface_handlers.c:7855
- 4	 in ui_do_but_TEX at blender/source/blender/editors/interface/interface_handlers.c:4398
- 5	 in ui_do_but_SEARCH_UNLINK at blender/source/blender/editors/interface/interface_handlers.c:4426
- 6	 in ui_do_button at blender/source/blender/editors/interface/interface_handlers.c:7558
- 7	 in ui_handle_button_event at blender/source/blender/editors/interface/interface_handlers.c:8707
- 8	 in ui_handle_menu_button at blender/source/blender/editors/interface/interface_handlers.c:9421
- 9	 in ui_handle_menus_recursive at blender/source/blender/editors/interface/interface_handlers.c:10534
- 10	 in ui_handler_region_menu at blender/source/blender/editors/interface/interface_handlers.c:10717
- 11	 in wm_handler_ui_call at blender/source/blender/windowmanager/intern/wm_event_system.c:617
- 12	 in wm_handlers_do_intern at blender/source/blender/windowmanager/intern/wm_event_system.c:2724
- 13	 in wm_handlers_do at blender/source/blender/windowmanager/intern/wm_event_system.c:2835
- 14	 in wm_event_do_handlers at blender/source/blender/windowmanager/intern/wm_event_system.c:3230
- 15	 in WM_main at blender/source/blender/windowmanager/intern/wm.c:447
#16	 in main at blender/source/creator/creator.c:524
`but->search_func(C, but->search_arg, but->editstr, &data->items);` `but->search_arg`is NULL ``` - 0 in ui_rna_collection_search_cb at blender/source/blender/editors/interface/interface_utils.c:399 - 1 in ui_searchbox_update at blender/source/blender/editors/interface/interface_region_search.c:379 - 2 in ui_textedit_begin at blender/source/blender/editors/interface/interface_handlers.c:3368 - 3 in button_activate_state at blender/source/blender/editors/interface/interface_handlers.c:7855 - 4 in ui_do_but_TEX at blender/source/blender/editors/interface/interface_handlers.c:4398 - 5 in ui_do_but_SEARCH_UNLINK at blender/source/blender/editors/interface/interface_handlers.c:4426 - 6 in ui_do_button at blender/source/blender/editors/interface/interface_handlers.c:7558 - 7 in ui_handle_button_event at blender/source/blender/editors/interface/interface_handlers.c:8707 - 8 in ui_handle_menu_button at blender/source/blender/editors/interface/interface_handlers.c:9421 - 9 in ui_handle_menus_recursive at blender/source/blender/editors/interface/interface_handlers.c:10534 - 10 in ui_handler_region_menu at blender/source/blender/editors/interface/interface_handlers.c:10717 - 11 in wm_handler_ui_call at blender/source/blender/windowmanager/intern/wm_event_system.c:617 - 12 in wm_handlers_do_intern at blender/source/blender/windowmanager/intern/wm_event_system.c:2724 - 13 in wm_handlers_do at blender/source/blender/windowmanager/intern/wm_event_system.c:2835 - 14 in wm_event_do_handlers at blender/source/blender/windowmanager/intern/wm_event_system.c:3230 - 15 in WM_main at blender/source/blender/windowmanager/intern/wm.c:447 #16 in main at blender/source/creator/creator.c:524 ```
Member

Added subscriber: @Tempo

Added subscriber: @Tempo
Alexia self-assigned this 2020-03-31 11:11:40 +02:00
Member
crash from c46dcdf887 created fix here : [D7286: Fix #75203 : Crash when changing active keying set](https://archive.blender.org/developer/D7286)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 1239cab11f

This issue was referenced by 1239cab11ff97faec708c7a4cf11007ac2b37108
Member
Added subscribers: @TheRedWaxPolice, @NelsonNAS, @unwave, @Raulus, @JulianEisel, @lichtwerk

Added subscriber: @hlorus

Added subscriber: @hlorus
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Uff, that was a hard nut! Had me running in circles and on wrong paths a few times. Turns out there were actually 3 pretty sneaky bugs involved here. Committed 74fa8787d8 & 1239cab11f.

Uff, that was a hard nut! Had me running in circles and on wrong paths a few times. Turns out there were actually 3 pretty sneaky bugs involved here. Committed 74fa8787d864 & 1239cab11ff9.
Member

Added subscriber: @demmordor

Added subscriber: @demmordor
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75203
No description provided.